# geti-instant-learn

./: .gitignore  README.md  SAM_HQ_TINY_OV_FIX_SUMMARY.md  omega_sam_hq_tiny_gpu_encoder_v2.md  sam3_int8_gpu_round2.md
.github/: .markdownlint-cli2.jsonc  CODEOWNERS  (+2 more)
application/backend/: Justfile  pyproject.toml
application/backend/app/: dependencies.py  main.py  settings.py
application/backend/app/api/: cache_utils.py  error_handler.py  routers.py
application/backend/app/api/endpoints/: __init__.py  datasets.py  devices.py  license.py  model_status.py  models.py  projects.py  sinks.py  source_types.py  sources.py  webrtc.py
application/backend/app/domain/: errors.py
application/backend/app/domain/alembic/versions/: 2025_10_07_1055-80b4e8ca793f_create_db_tables.py
application/backend/app/domain/db/: constraints.py  models.py
application/backend/app/domain/repositories/: base.py  processor.py  prompt.py  supported_model.py
application/backend/app/domain/services/: base.py  dataset_discovery.py  label.py  model.py  project.py  prompt.py  source.py  thumbnail.py
application/backend/app/domain/services/schemas/: annotation.py  base.py  dataset.py  device.py  frame_trace.py  health.py  label.py  license.py  model_status.py  pipeline.py  processor.py  project.py  prompt.py  reader.py
application/backend/app/domain/services/schemas/mappers/: mask.py  processor.py  project.py  prompt.py  source.py
application/backend/app/runtime/: components.py  errors.py  pipeline_manager.py
application/backend/app/runtime/core/components/: base.py  broadcaster.py  pipeline.py  processor.py  sink.py  source.py
application/backend/app/runtime/services/: dataset_discovery.py  device.py  image_thumbnail.py  license.py  model_load_error.py  reference_batch.py
application/backend/app/runtime/webrtc/: manager.py  stream.py  visualizer.py
application/backend/tests/integration/domain/repository/: test_processor.py  test_project_repository.py  test_prompt_repository.py  test_supported_models.py
application/backend/tests/unit/api/: test_cache_utils.py  test_dependencies_dataset_path.py
application/backend/tests/unit/api/endpoints/: test_datasets.py  test_devices.py  test_health.py  test_license.py  test_model_status.py  test_models.py  test_project_reload.py  test_projects_endpoints.py  test_sinks.py  test_source_types_endpoints.py  test_sources_endpoints.py  test_supported_models.py  test_webrtc.py
application/backend/tests/unit/domain/services/: test_base_service.py  test_dataset_discovery.py  test_model.py  test_project_service.py  test_prompt_service.py  test_sink.py  test_source_service.py  test_thumbnails.py
application/backend/tests/unit/runtime/: test_components.py  test_pipeline_manager.py
application/backend/tests/unit/runtime/services/: test_device.py  test_image_thumbnail.py  test_license_service.py  test_model_load_error.py  test_reference_batch.py
application/backend/tests/unit/runtime/webrtc/: test_manager.py  test_stream.py  test_visualizer.py
(+216 files in other folders)
